--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
+    "mongoose": "^8.19.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.11",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
+    "autoprefixer": "^10.4.21",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14"
   }
 }
