--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "mongoose": "^8.19.0",
     "next": "14.2.4",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "resend": "^6.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
